--- a/Metodos.ipynb
+++ b/Metodos.ipynb
@@ -383,10 +383,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce x00\n",
+      "Introduce xf1\n",
+      "Introduce las iteraciones100\n",
+      "Introduce y02\n",
+      "2.3660323412732294\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def dydx(x,y):\n",
+    "    return x-y+2\n",
+    "\n",
+    "x0 = float(input('Introduce x0'))\n",
+    "xf = float(input('Introduce xf'))\n",
+    "n = int(input('Introduce las iteraciones'))\n",
+    "y0 = float(input('Introduce y0'))\n",
+    "h = (xf - x0) / n\n",
+    "\n",
+    "x=[x0]\n",
+    "y=[y0]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    y0 = y0 + h*dydx(x0, y0)\n",
+    "    y.append(y0)\n",
+    "    x0 = x0 + h \n",
+    "    x.append(x0)\n",
+    "    \n",
+    "print(y[-1])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
